move const to field good closing program in the catch CAPS for field of ListDrinks split BaristaStorage for SRP